Added the draw operation

--- a/hub75/CMakeLists.txt
+++ b/hub75/CMakeLists.txt
@@ -5,10 +5,6 @@ cmake_minimum_required(VERSION 3.13)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
-# initalize pico_sdk from installed location
-# (note this can come from environment, CMake cache etc)
-#set(PICO_SDK_PATH "/home/ekow/Software/rpi-pico/pico-sdk")
-
 # Pull in Raspberry Pi Pico SDK (must be before project)
 include(pico_sdk_import.cmake)
 
@@ -18,11 +14,16 @@ project(pio_hub75 C CXX ASM)
 pico_sdk_init()
 
 add_executable(starfield)
-
 pico_enable_stdio_usb(starfield 0)
 pico_enable_stdio_uart(starfield 1)
-
 pico_generate_pio_header(starfield ${CMAKE_CURRENT_LIST_DIR}/hub75.pio)
-
 target_sources(starfield PRIVATE starfield.c display.c)
 target_link_libraries(starfield PRIVATE pico_stdlib hardware_pio)
+
+
+add_executable(smiley)
+pico_enable_stdio_usb(smiley 0)
+pico_enable_stdio_uart(smiley 1)
+pico_generate_pio_header(smiley ${CMAKE_CURRENT_LIST_DIR}/hub75.pio)
+target_sources(smiley PRIVATE smiley.c display.c)
+target_link_libraries(smiley PRIVATE pico_stdlib hardware_pio)
