Added text and adafruit's font library

--- a/hub75/CMakeLists.txt
+++ b/hub75/CMakeLists.txt
@@ -27,3 +27,12 @@ pico_enable_stdio_uart(smiley 1)
 pico_generate_pio_header(smiley ${CMAKE_CURRENT_LIST_DIR}/hub75.pio)
 target_sources(smiley PRIVATE smiley.c display.c)
 target_link_libraries(smiley PRIVATE pico_stdlib hardware_pio)
+
+
+add_executable(text)
+pico_enable_stdio_usb(text 0)
+pico_enable_stdio_uart(text 1)
+pico_generate_pio_header(text ${CMAKE_CURRENT_LIST_DIR}/hub75.pio)
+target_sources(text PRIVATE text.c display.c)
+target_link_libraries(text PRIVATE pico_stdlib hardware_pio)
+
